# kasa-simulasyonu

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  feature-workflow.yml
include/: kasa_simulasyonu.h
src/: kasa_simulasyonu.c  main.c
tests/: test_stok.c
